--- a/package.json
+++ b/package.json
@@ -12,19 +12,26 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@hookform/resolvers": "^3.6.0",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "axios": "^1.7.2",
     "jotai": "^2.8.0",
+    "js-cookie": "^3.0.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.52.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.3",
     "simplebar-react": "^3.2.5",
     "sort-by": "^1.2.0",
-    "swiper": "^11.1.1"
+    "swiper": "^11.1.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
