--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-hook-form": "^7.52.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.3",
+    "react-share": "^5.1.0",
     "simplebar-react": "^3.2.5",
     "sort-by": "^1.2.0",
     "swiper": "^11.1.1",
